--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,8 @@
     "build.ts"
   ],
   "dependencies": {
+    "@comunica/actor-init-sparql": "^1.22.3",
+    "@types/sparqljs": "^3.1.3",
     "command-line-args": "^5.2.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
@@ -71,7 +73,8 @@
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sparqljs": "^3.5.1"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
