--- a/server/package.json
+++ b/server/package.json
@@ -73,6 +73,7 @@
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.2",
+    "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
     "sparqljs": "^3.5.1"
   },
