--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "build": "./node_modules/.bin/ts-node build.ts",
     "lint": "eslint . --ext .ts",
-    "start": "node -r module-alias/register ./dist --env=production",
-    "start:dev": "nodemon",
+    "start": "node  -r module-alias/register ./dist --env=production",
+    "start:dev": "nodemon ",
     "test": "nodemon --config ./spec/nodemon.json",
     "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec"
   },
@@ -62,13 +62,17 @@
   ],
   "dependencies": {
     "@comunica/actor-init-sparql": "^1.22.3",
+    "@types/nspell": "^2.1.1",
     "@types/sparqljs": "^3.1.3",
     "command-line-args": "^5.2.0",
     "cookie-parser": "^1.4.6",
+    "dictionary-en": "^3.1.0",
     "dotenv": "^10.0.0",
+    "expose-gc": "^1.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
+    "fast-levenshtein": "^3.0.0",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
@@ -76,7 +80,10 @@
     "module-alias": "^2.2.2",
     "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
-    "sparqljs": "^3.5.1"
+    "natural": "^5.1.11",
+    "nspell": "^2.1.5",
+    "sparqljs": "^3.5.1",
+    "typo-js": "^1.2.1"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
