--- a/server/package.json
+++ b/server/package.json
@@ -62,6 +62,7 @@
   ],
   "dependencies": {
     "@comunica/actor-init-sparql": "^1.22.3",
+    "@types/natural": "^5.1.0",
     "@types/nspell": "^2.1.1",
     "@types/sparqljs": "^3.1.3",
     "command-line-args": "^5.2.0",
@@ -77,13 +78,18 @@
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
     "jsonfile": "^6.1.0",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
     "natural": "^5.1.11",
+    "node-fetch": "^2.6.6",
+    "node-wordnet": "^0.1.12",
     "nspell": "^2.1.5",
     "sparqljs": "^3.5.1",
-    "typo-js": "^1.2.1"
+    "typo-js": "^1.2.1",
+    "wndb-with-exceptions": "^3.0.2",
+    "wordnet-db": "^3.1.14"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
@@ -93,8 +99,10 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jasmine": "^3.10.2",
     "@types/jsonfile": "^6.0.1",
+    "@types/lodash": "^4.14.177",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.7",
+    "@types/node-fetch": "^2.5.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
